--- a/Pulsar_DomeDriver.csproj
+++ b/Pulsar_DomeDriver.csproj
@@ -12,6 +12,7 @@
     <AssemblyName>Pulsar_DomeDriver</AssemblyName>
     <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <LangVersion>10.0</LangVersion>
+    <Nullable>annotations</Nullable>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
